cmake_minimum_required(VERSION 3.17)
project(NALOGA_1101)

set(CMAKE_CXX_STANDARD 17)

add_executable(NALOGA_1101 main.cpp View.h View.cpp Unit.h TextView.h TextView.cpp Size.h Size.cpp Position.h Position.cpp Layout.h Layout.cpp ImageView.h ImageView.cpp ImageButton.h ImageButton.cpp Button.h Button.cpp)